version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/ACT/Automation/Mechanical/CondensedPartInterface.rst.txt
.. vale off



:class:`CondensedPartInterface`
===============================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.ACT.Automation.Mechanical.CondensedPartInterface

   Bases: :py:obj:`object`



.. py:currentmodule:: CondensedPartInterface

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~AllSelection`
            - AllSelection property.
          * - :py:attr:`~NamedSelection`
            - Gets or Sets NamedSelection
          * - :py:attr:`~RemotePointSelection`
            - Gets or Sets RemotePointSelection
          * - :py:attr:`~Type`
            - Gets or Sets Condensed part interface type







Property detail
---------------
.. py:property:: AllSelection
   :type: Optional[Ansys.ACT.Automation.Mechanical.ImportedDataModelObject]


   
   AllSelection property.
















   ..
       !! processed by numpydoc !!

.. py:property:: NamedSelection
   :type: Optional[Ansys.ACT.Automation.Mechanical.NamedSelection]


   
   Gets or Sets NamedSelection
















   ..
       !! processed by numpydoc !!

.. py:property:: RemotePointSelection
   :type: Optional[Ansys.ACT.Automation.Mechanical.RemotePoint]


   
   Gets or Sets RemotePointSelection
















   ..
       !! processed by numpydoc !!

.. py:property:: Type
   :type: Optional[Ansys.Mechanical.DataModel.Enums.CondensedPartInterfaceType]


   
   Gets or Sets Condensed part interface type
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on